[gd_scene load_steps=14 format=3 uid="uid://b3n15fxxdcxq7"]

[ext_resource type="Script" uid="uid://clrhkvevap20h" path="res://assets/scripts/enemy/enemy_controller.gd" id="1_7dwqs"]
[ext_resource type="Material" uid="uid://bw7qseeojktwo" path="res://assets/materials/player.tres" id="2_jfc8i"]
[ext_resource type="Script" uid="uid://fk0ptlx51pae" path="res://assets/scripts/old/state_machine/state_machine_old.gd" id="2_taltf"]
[ext_resource type="Script" uid="uid://bpx1qyv8ow44p" path="res://assets/scripts/enemy/enemy_idle_state.gd" id="3_4pfs4"]
[ext_resource type="Script" uid="uid://j2sybe2jtcf6" path="res://assets/scripts/enemy/enemy_wandering_state.gd" id="4_qbybw"]
[ext_resource type="Script" uid="uid://drgt05kekpa0c" path="res://assets/scripts/enemy/enemy_chase_state.gd" id="6_r2ggu"]
[ext_resource type="Script" uid="uid://c7kty32r0ba87" path="res://assets/scripts/enemy/enemy_ranged_attack_state.gd" id="7_qlv8m"]
[ext_resource type="Script" uid="uid://5u7q8xhpruqi" path="res://assets/scripts/enemy/enemy_alert_state.gd" id="8_3jae2"]
[ext_resource type="PackedScene" uid="uid://ui0s883i8yx2" path="res://scenes/projectile_launcher.tscn" id="9_2t4b6"]
[ext_resource type="PackedScene" uid="uid://crhxtrav7way7" path="res://scenes/projectiles/projectile.tscn" id="10_ohbev"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_7xaro"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_7xaro"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_r2ggu"]
height = 1.0
radius = 3.0

[node name="CharacterBody3D" type="CharacterBody3D"]
script = ExtResource("1_7dwqs")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_7xaro")

[node name="MeshInstance3D" type="MeshInstance3D" parent="CollisionShape3D"]
material_override = ExtResource("2_jfc8i")
mesh = SubResource("CapsuleMesh_7xaro")

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]
debug_enabled = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="VisionArea" type="Area3D" parent="."]

[node name="VisionShape" type="CollisionShape3D" parent="VisionArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3, 2, 0)
shape = SubResource("CylinderShape3D_r2ggu")

[node name="EnemyStateMachine" type="Node3D" parent="." node_paths=PackedStringArray("CURRENT_STATE")]
script = ExtResource("2_taltf")
CURRENT_STATE = NodePath("EnemyWanderingState")

[node name="EnemyIdleState" type="Node" parent="EnemyStateMachine"]
script = ExtResource("3_4pfs4")

[node name="EnemyWanderingState" type="Node" parent="EnemyStateMachine"]
script = ExtResource("4_qbybw")

[node name="EnemyAlertState" type="Node" parent="EnemyStateMachine"]
script = ExtResource("8_3jae2")

[node name="EnemyChaseState" type="Node" parent="EnemyStateMachine"]
script = ExtResource("6_r2ggu")

[node name="EnemyRangedAttackState" type="Node" parent="EnemyStateMachine"]
script = ExtResource("7_qlv8m")

[node name="ProjectileLauncher" parent="." instance=ExtResource("9_2t4b6")]
projectile_scene = ExtResource("10_ohbev")
